Fixed a lot of stufffffff

--- a/music/readme
+++ b/music/readme
@@ -1,1 +1,5 @@
 you have to put here 3 `ogg`-music files. i can't push my ones cause there are not open source.
+
+1 is dejans
+2 is pegboard nerds emergency
+3 is tristam i remember
